// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsoleReporter Constructor Creates a ConsoleReporter 1`] = `
ConsoleReporter {
  "context": Context {
    "globalTags": Object {},
  },
  "format": [Function],
  "output": [Function],
}
`;

exports[`ConsoleReporter Constructor Creates a ConsoleReporter with a format 1`] = `
ConsoleReporter {
  "context": Context {
    "globalTags": Object {},
  },
  "format": [Function],
  "output": [Function],
}
`;

exports[`ConsoleReporter Constructor Creates a ConsoleReporter with an output 1`] = `
ConsoleReporter {
  "context": Context {
    "globalTags": Object {},
  },
  "format": [Function],
  "output": [Function],
}
`;

exports[`ConsoleReporter Constructor Creates a ConsoleReporter with global tags 1`] = `
ConsoleReporter {
  "context": Context {
    "globalTags": Object {
      "globalTag1": "global_one",
      "globalTag2": "global_two",
    },
  },
  "format": [Function],
  "output": [Function],
}
`;

exports[`ConsoleReporter decrement Reports a counter metric 1`] = `
Array [
  Array [
    "{ DECREMENT: { stat: [32m'decrement_test'[39m, sampleRate: [33m1[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter decrement Reports a counter metric with a sample rate 1`] = `
Array [
  Array [
    "{ DECREMENT: { stat: [32m'decrement_test'[39m, sampleRate: [33m0.5[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter decrement Reports a counter metric with tags 1`] = `
Array [
  Array [
    "{ DECREMENT: { stat: [32m'decrement_test'[39m, sampleRate: [33m1[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m, tag_1: [32m'one'[39m, tag_2: [32m'two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter decrementBy Reports a counter metric 1`] = `
Array [
  Array [
    "{ DECREMENT: { stat: [32m'decrement_by_test'[39m, value: [33m10[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter decrementBy Reports a counter metric with tags 1`] = `
Array [
  Array [
    "{ DECREMENT: { stat: [32m'decrement_by_test'[39m, value: [33m10[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m, tag_1: [32m'one'[39m, tag_2: [32m'two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter gauge Reports a gauge metric 1`] = `
Array [
  Array [
    "{ GAUGE: { stat: [32m'gauge_test'[39m, value: [33m10[39m, sampleRate: [33m1[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter gauge Reports a gauge metric with a sample rate 1`] = `
Array [
  Array [
    "{ GAUGE: { stat: [32m'gauge_test'[39m, value: [33m10[39m, sampleRate: [33m0.5[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter gauge Reports a gauge metric with tags 1`] = `
Array [
  Array [
    "{ GAUGE: { stat: [32m'gauge_test'[39m, value: [33m10[39m, sampleRate: [33m0.5[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m, tag_1: [32m'one'[39m, tag_2: [32m'two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter histogram Reports a histogram metric 1`] = `
Array [
  Array [
    "{ HISTOGRAM: { stat: [32m'histogram_test'[39m, time: [33m20[39m, sampleRate: [33m1[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter histogram Reports a histogram metric with a sample rate 1`] = `
Array [
  Array [
    "{ HISTOGRAM: { stat: [32m'histogram_test'[39m, time: [33m20[39m, sampleRate: [33m0.5[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter histogram Reports a histogram metric with tags 1`] = `
Array [
  Array [
    "{ HISTOGRAM: { stat: [32m'histogram_test'[39m, time: [33m20[39m, sampleRate: [33m1[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m, tag_1: [32m'one'[39m, tag_2: [32m'two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter increment Reports a counter metric 1`] = `
Array [
  Array [
    "{ INCREMENT: { stat: [32m'increment_test'[39m, sampleRate: [33m1[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter increment Reports a counter metric with a sample rate 1`] = `
Array [
  Array [
    "{ INCREMENT: { stat: [32m'increment_test'[39m, sampleRate: [33m0.5[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter increment Reports a counter metric with tags 1`] = `
Array [
  Array [
    "{ INCREMENT: { stat: [32m'increment_test'[39m, sampleRate: [33m1[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m, tag_1: [32m'one'[39m, tag_2: [32m'two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter incrementBy Reports a counter metric 1`] = `
Array [
  Array [
    "{ INCREMENT: { stat: [32m'increment_by_test'[39m, value: [33m10[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter incrementBy Reports a counter metric with tags 1`] = `
Array [
  Array [
    "{ INCREMENT: { stat: [32m'increment_by_test'[39m, value: [33m10[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m, tag_1: [32m'one'[39m, tag_2: [32m'two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter timing Reports a timing metric 1`] = `
Array [
  Array [
    "{ TIME: { stat: [32m'timing_test'[39m, time: [33m20[39m, sampleRate: [33m1[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter timing Reports a timing metric with a sample rate 1`] = `
Array [
  Array [
    "{ TIME: { stat: [32m'timing_test'[39m, time: [33m20[39m, sampleRate: [33m0.5[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m } } }",
  ],
]
`;

exports[`ConsoleReporter timing Reports a timing metric with tags 1`] = `
Array [
  Array [
    "{ TIME: { stat: [32m'timing_test'[39m, time: [33m20[39m, sampleRate: [33m1[39m, tags: { global_tag_1: [32m'global_one'[39m, global_tag_2: [32m'global_two'[39m, tag_1: [32m'one'[39m, tag_2: [32m'two'[39m } } }",
  ],
]
`;
